Fixed header z-index

--- a/main.css
+++ b/main.css
@@ -54,6 +54,10 @@ header.main-page {
   padding: 3px 0 0 0;
 }
 
+header {
+  z-index: 10;
+}
+
 header ul {
   margin-left: auto;
   padding: 0 16px 0 0;
